--- a/src/pages/maintainer/work.astro
+++ b/src/pages/maintainer/work.astro
@@ -34,7 +34,7 @@ import WorkPanel from "@/components/maintainer/WorkPanel";
   </InfoPanel> -->
   <InfoPanel slot="left" title="About issues" icon="info">
     <div class="mb-4">
-      <ul class="text-xs text-gray-600 space-y-1">
+      <ul class="text-xs text-gray-600 dark:text-gray-300 space-y-1">
         <li>
           • Public issues are the app feedback, equiavalent to GitHub issues.
         </li>
