--- a/src/pages/data/project/index.astro
+++ b/src/pages/data/project/index.astro
@@ -75,7 +75,7 @@ const projectData: ProjectInfoProps = {
     slot="center"
     icon="success"
   >
-    <span class="text-sm text-gray-700"
+    <span class="text-sm"
       >A quick task was added on CascadeFund page. You are automatically
       following the issue.</span
     >
@@ -86,7 +86,7 @@ const projectData: ProjectInfoProps = {
     slot="center"
     icon="success"
   >
-    <span class="text-sm text-gray-700"
+    <span class="text-sm"
       >You are now following the project. Whenever it appears on the
       CascadeFund, you will be notified.</span
     >
@@ -98,5 +98,5 @@ const projectData: ProjectInfoProps = {
 
   <!-- <HighlightedInteraction slot="right" /> -->
   <!-- <ProjectPeople slot="right" /> -->
-  <IssueInfoPanel slot="right" />
+  <!-- <IssueInfoPanel slot="right" /> -->
 </V2Layout>
