--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,5 +21,19 @@ import Captcha from "@/components/captcha.astro";
   >
     <Captcha client:load />
     <slot />
+    <!-- Google tag (gtag.js) -->
+    <script
+      is:inline
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-953VZH2RB6"></script>
+    <script is:inline>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-953VZH2RB6");
+    </script>
   </body>
 </html>
