--- a/src/pages/meta/vision.astro
+++ b/src/pages/meta/vision.astro
@@ -14,15 +14,16 @@ import { Accent } from "../scripts/data";
 ---
 
 <Layout>
-  <Header client:load homePage="/" />
+  <Header client:load homePage="/vision" />
   <main>
-    <Hero client:load accent={Accent.monetizationPrimaryAccent} />
-    <HowItWorks client:load />
-    <Pricing client:load />
-    <Features client:load />
+    <Hero client:load accent={Accent.visionaryAccent} />
     <Vision client:load />
+    <HowItWorks client:load />
+    <Features client:load />
+    <Pricing client:load />
     <JoinUs client:load />
     <Team client:load />
   </main>
   <Footer client:load />
 </Layout>
+
