Update landing page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import { Accent } from "../scripts/data";
 ---
 
 <Layout>
-  <Header client:load homePage="/" />
+  <Header client:load />
   <main>
     <Hero client:load accent={Accent.monetizationPrimaryAccent} />
     <HowItWorks client:load />
