--- a/src/pages/meta/management.astro
+++ b/src/pages/meta/management.astro
@@ -1,20 +1,20 @@
 ---
-import "../styles/index.css";
-import Header from "../components/landing/Header";
-import Hero from "../components/landing/Hero";
-import Vision from "../components/landing/Vision";
-import HowItWorks from "../components/landing/HowItWorks";
-import Features from "../components/landing/Features";
-import Pricing from "../components/landing/Pricing";
-import JoinUs from "../components/landing/JoinUs";
-import Team from "../components/landing/Team";
-import Footer from "../components/landing/Footer";
-import Layout from "../layouts/Layout.astro";
-import { Accent } from "../scripts/data";
+import "../../styles/index.css";
+import Header from "../../components/landing/Header";
+import Hero from "../../components/landing/Hero";
+import Vision from "../../components/landing/Vision";
+import HowItWorks from "../../components/landing/HowItWorks";
+import Features from "../../components/landing/Features";
+import Pricing from "../../components/landing/Pricing";
+import JoinUs from "../../components/landing/JoinUs";
+import Team from "../../components/landing/Team";
+import Footer from "../../components/landing/Footer";
+import Layout from "../../layouts/Layout.astro";
+import { Accent } from "../../scripts/data";
 ---
 
 <Layout>
-  <Header client:load homePage="/management" />
+  <Header client:load />
   <main>
     <Hero client:load accent={Accent.timeSavedProjectManagementAccent} />
     <HowItWorks client:load />
@@ -26,4 +26,3 @@ import { Accent } from "../scripts/data";
   </main>
   <Footer client:load />
 </Layout>
-
