--- a/src/pages/meta/vision.astro
+++ b/src/pages/meta/vision.astro
@@ -10,7 +10,7 @@ import JoinUs from "../../components/landing/JoinUs";
 import Team from "../../components/landing/Team";
 import Footer from "../../components/landing/Footer";
 import Layout from "../../layouts/Layout.astro";
-import { Accent } from "../../scripts/data";
+import { Accent } from "../../scripts/data.tsx";
 ---
 
 <Layout>
