--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,7 +19,7 @@ import Captcha from "@/components/captcha.astro";
   <body
     class="min-h-screen bg-neutral-200 dark:bg-gray-900 transition-colors duration-300"
   >
-    <Captcha client:load />
+    <!-- <Captcha client:load /> -->
     <slot />
     <!-- Google tag (gtag.js) -->
     <script
