Remove the youtube

--- a/src/pages/app.astro
+++ b/src/pages/app.astro
@@ -394,40 +394,35 @@ const teamSection: SectionProps = {
           uri="https://t.me/cascadefund"
         >
           <ReactComponentImporter element={getIcon("telegram")} /> Telegram
-        </Link>, and to catch updates on subscribe to our <Link
-          className="flex items-center space-x-1 gap-1 -mr-2 underline"
-          asNewTab={true}
-          uri="https://www.youtube.com/@cascadefund"
-        >
-          <ReactComponentImporter element={getIcon("youtube")} /> YouTube
-        </Link>.
+        </Link>
       </p>
+      <div class="mx-auto">
+        <p class="text-lg md:text-xl leading-relaxed">
+          Subscribe with your email, it helps us a feedback. Our early adopters
+          will receive +20 voting power points on CascadeFund when we launch.
+        </p>
+      </div>
     </div>
-    <div class="mx-auto">
-      <p class="text-lg md:text-xl leading-relaxed">
-        Subscribe with your email, it helps us a feedback. Our early adopters
-        will receive +20 voting power points on CascadeFund when we launch.
-      </p>
-    </div>
-  </Section>
 
-  <Section {...teamSection}>
-    <p
-      class="text-lg md:text-xl leading-relaxed flex items-center justify-center space-x-1 gap-2"
-    >
-      CascadeFund is built by two developers whose top achievements shaped their
-      paths in tech.
-    </p>
-    <p class="text-lg md:text-xl leading-relaxed">
-      Medet taught himself programming and, as his first major project in 2015,
-      created a full programming language from scratch in C. He later became CTO
-      and Chief of Blocklords, leading its technical development. LinkedIn
-    </p>
-    <p class="text-lg md:text-xl leading-relaxed">
-      Sergey has been coding since the early internet. A veteran of the first
-      dot-com era, he built CRMs and frameworks still in use today. He now
-      serves as CTO at one of the largest data analytics companies, working with
-      leading banks worldwide.
-    </p>
+    <Section {...teamSection}>
+      <p
+        class="text-lg md:text-xl leading-relaxed flex items-center justify-center space-x-1 gap-2"
+      >
+        CascadeFund is built by two developers whose top achievements shaped
+        their paths in tech.
+      </p>
+      <p class="text-lg md:text-xl leading-relaxed">
+        Medet taught himself programming and, as his first major project in
+        2015, created a full programming language from scratch in C. He later
+        became CTO and Chief of Blocklords, leading its technical development.
+        LinkedIn
+      </p>
+      <p class="text-lg md:text-xl leading-relaxed">
+        Sergey has been coding since the early internet. A veteran of the first
+        dot-com era, he built CRMs and frameworks still in use today. He now
+        serves as CTO at one of the largest data analytics companies, working
+        with leading banks worldwide.
+      </p>
+    </Section>
   </Section>
 </V2Layout>
